[project]
name = "openbuildings-app"
version = "0.1.0"
description = ""
authors = [
    {name = "belisards", email = "adrianobf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.39.0",
    "folium>=0.18.0",
    "streamlit-folium>=0.23.1",
    "geojson>=3.1.0",
    "shapely>=2.0.6",
    "pyproj>=3.7.0",
    "ipython>=8.29.0",
    "s2sphere>=0.2.5",
    "tqdm>=4.66.6",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=2.18.2",
    "fsspec>=2024.10.0",
    "gcsfs>=2024.10.0",
    "geopandas>=1.0.1",
    "psutil>=5.9.0",
    "st-files-connection>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]

[tool.poetry]
package-mode = false

