[project]
name = "openbuildings-app"
version = "0.2.0"
description = "Streamlit app for exploring building footprints from Overture Maps Buildings dataset"
authors = [
    {name = "belisards", email = "adrianobf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "streamlit>=1.39.0",
    "folium>=0.18.0",
    "streamlit-folium>=0.23.1",
    "geojson>=3.1.0",
    "shapely>=2.0.6",
    "pyproj>=3.7.0",
    "ipython>=8.29.0",
    "tqdm>=4.66.6",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "overturemaps>=0.17.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
