[project]
name = "openbuildings-app"
version = "0.1.0"
description = ""
authors = [
    {name = "belisards", email = "adrianobf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.39.0",
    "folium>=0.18.0",
    "streamlit-folium>=0.23.1",
    "geojson>=3.1.0",
    "shapely>=2.0.6",
    "pyproj>=3.7.0",
    "ipython>=8.29.0",
    "tqdm>=4.66.6",
    "geopandas>=1.0.1",
    "psutil>=5.9.0",
    "segment-geospatial[samgeo2]>=0.12.0",
    "leafmap>=0.36.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]

[tool.poetry]
package-mode = false

